<resources>
    <string name="app_name">CourseworkOne</string>
    <string name="CarGame">Car Game</string>
    <string name="aboutButton">About</string>
    <string name="newCarGame">New Car Game</string>
    <string name="brandButton">Identify The Brand</string>
    <string name="hintsButton">Hints</string>
    <string name="carButton">Identify The Car</string>
    <string name="advancedLevel">Advanced Level</string>
    <string name="textviewCorrect">CORRECT!</string>
    <string name="textviewWrong">WRONG!</string>
    <string name="HintsText">_____________</string>
    <string name="SubmitButton">Submit</string>
    <string name="NextButton">Next</string>
    <string name="aboutMyName">StudentID: B00787152 \nStudentName: James Shiels.\n \nI confirm that I understand what plagiarism is and have read the University’s policy on plagiarism and understand the definition of plagiarism. The work that I have submitted is entirely my own. Any work from other authors is duly referenced and acknowledged. I understand that I may face sanctions in accordance with the policies and procedures of the University.</string>
</resources>